Add comments and fix typos

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,15 +2,12 @@
 # https://github.com/damnever/pigar
 Keras==2.2.0
 PyYAML == 3.12
-Shapely == 1.6.4.post1
 astropy==3.0.3
-fact_plots == 0.3.0
 h5py==2.8.0
 matplotlib == 2.2.2
 numpy==1.14.5
 pandas==0.23.1
 pip install git+https://github.com/fact-project/photon_stream.git
-pyfact==0.20.1
-scikit_learn == 0.19.1
+pyfact>=0.20.1
 scipy == 1.1.0
 tensorflow==1.8.0
