--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ matplotlib >= 2.2.2
 numpy>=1.14.5
 pandas>=0.23.1
 pip install git+https://github.com/fact-project/photon_stream.git
+pip install git+https://github.com/relleums/phs_air_shower_feature_generation.git
 pyfact>=0.20.1
 scipy >= 1.1.0
 tensorflow>=1.8.0
